# autotrading

./: .cursorrules  .gitignore  CURSOR_OPTIMIZATION_GUIDE.md  Project_Completion_Report.md  README.md  create_symlinks_admin.bat  pyproject.toml  release_checklist.md
configs/: hybrid_config.yaml  production_params.json  training_config.yaml
models/: trading_signal_model.keras
models/production/: signal_success_model.keras
scripts/: analyze_pyright_report.py  backtest_ai_model.py  check_dates.py  check_rows.py  cleanup_heavy_data.py  create_macd_zone_labels.py  generate_sample_data.py  generate_sequences.py  integrated_take_profit_system.py  live_ai_predictions.py  merge_labels.py  optimize_data.py  optimize_hybrid_system.py  phase4_virtual_trading.py  pipeline_runner.py  portfolio_optimizer.py  run_training.py  run_wfa.py  setup_directories.py  simple_collector.py  trading_dashboard.py  train_transformer.py  virtual_trading_simulator.py
scripts/archive/: analyze_pyright_report.py  analyze_pyright_report_v2.py  analyze_report.py  check_dates.py  check_output.py  check_rows.py  (+10 more)
src/: __init__.py
tools/: analyze_label_performance.py  analyze_label_performance_fast.py  analyze_macd_labels.py  analyze_profit_distribution.py  data_driven_exit_strategy.py  fix_data_index.py  generate_sequences.py  live_ai_predictions.py  merge_labels.py  monitor_pyright_memory.ps1  optimize_hybrid_system.py  perform_cursor_cleanup.ps1  portfolio_optimizer.py  trading_dashboard.py  train_transformer.py  triple_barrier_labeler.py  virtual_trading_simulator.py
typings/: ta.pyi
(+239 files in other folders)
