[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-suite"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "Advanced Quantitative Trading System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0,<2.3",
    "scikit-learn>=1.0.0",
    "torch>=1.11.0",
    "joblib>=1.1.0",
    "tqdm>=4.64.0",
    "ccxt>=4.0.0",
    "pyarrow>=10.0.0",
    "loguru>=0.6.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "polars",
    "numba",
    "psutil>=5.9.0",
    "tensorflow",
    "scikeras",
    "flask",
    "flask-socketio"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyright",
    "pandas-stubs",
    "scipy-stubs",
]

[tool.setuptools.packages.find]
where = ["src"] 